--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-f1-selector></app-f1-selector>
+<body>
+    <app-f1-selector></app-f1-selector>
+    <app-f1-polls></app-f1-polls>
+    <app-f1-details></app-f1-details>
+</body>
+
+
