--- a/src/app/components/f1-details/f1-details.component.html
+++ b/src/app/components/f1-details/f1-details.component.html
@@ -1,1 +1,14 @@
-<p>f1-details works!</p>
+<div>
+
+    <img [src]="wikiService.image$ | async" alt="">
+    <a [href]="(f1Service.topResult?.url)">Wiki page link</a>
+    @if (isExpanded) {
+
+        <p>{{ wikiService.description$ | async }}</p>
+    } @else {
+        <p>{{ truncateText(wikiService.description$|async, 1000) }}</p>
+    }
+    <button (click)="isExpanded = !isExpanded">{{ isExpanded ? 'Read Less' : 'Read More' }}</button>
+</div>
+
+
