--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<body>
-    <app-f1-selector></app-f1-selector>
-    <app-f1-polls></app-f1-polls>
-    <app-f1-details></app-f1-details>
-</body>
+<router-outlet></router-outlet>
 
 
