--- a/src/app/components/f1/f1.component.html
+++ b/src/app/components/f1/f1.component.html
@@ -1,6 +1,6 @@
 <body>
 <app-f1-selector></app-f1-selector>
-<div style="display: flex; flex-direction: column">
+<div>
     <app-f1-polls></app-f1-polls>
     <app-f1-results></app-f1-results>
 </div>
