--- a/src/app/components/f1/f1.component.scss
+++ b/src/app/components/f1/f1.component.scss
@@ -11,6 +11,12 @@ body {
     border-radius: 1rem;
     padding: 1em;
   }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .shadow {
