--- a/src/app/components/f1/f1.component.html
+++ b/src/app/components/f1/f1.component.html
@@ -1,8 +1,8 @@
-<body>
-<app-f1-selector></app-f1-selector>
-<div>
-    <app-f1-polls></app-f1-polls>
-    <app-f1-results></app-f1-results>
+<div class="container">
+    <app-f1-selector class="shadow"></app-f1-selector>
+    <div class="column shadow">
+        <app-f1-polls></app-f1-polls>
+        <app-f1-results></app-f1-results>
+    </div>
+    <app-f1-details class="shadow"></app-f1-details>
 </div>
-<app-f1-details></app-f1-details>
-</body>
