--- a/src/app/components/f1/f1-polls/f1-polls.component.html
+++ b/src/app/components/f1/f1-polls/f1-polls.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="container shadow">
 
-    <div class="poll shadow">
-        @if ((f1Service.results$|async); as results) {
+    <div class="poll">
+        @if ((results$|async); as results) {
             @if (results.length > 0) {
                 <div>
                     <label>{{ results[1].Driver.familyName }}</label>
