--- a/src/app/components/f1/f1.component.scss
+++ b/src/app/components/f1/f1.component.scss
@@ -1,27 +1,16 @@
-body {
+.container {
 
   display: grid;
   grid-template-columns: 1fr 4fr 2fr;
-  gap: 1em;
 
   * {
-    background-color: #e0e0e0;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
-
-    border-radius: 1rem;
     padding: 1em;
+    border-radius: 1rem;
   }
 
-  div {
+  .column {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
   }
 }
 
-.shadow {
-  padding: 4px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  width: 100%;
-}
